@@ -32,6 +32,7 @@
     2    radio  Detect receives of radio bytes and notify radio probes
 
 ----------------------------------- Completed -----------------------------------------
+    1    input  Workaround for objdump 2.16.1 bug                             1.7.74 
     1      gdb  Switched gdb monitor to use lowercase hex [Tim Auton]         1.7.73
     1      dev  Fixed problem with ADC conversion simulation                  1.7.72
     1      sim  Enable / Disable interrupts on write to SREG                  1.7.69
